Removing premailer.  Getting CSS inlining to work correctly is a massive challenge.  The CSS parser needs to be updated to a parser that understand CSS3 and tokenizes complex attribute values (ExCSS is close), then we need a CSS specifity calculator to apply the rules in the correct order, and then we still need to implement proper css rule merging.

--- a/Source/Email/Templates/simple.css
+++ b/Source/Email/Templates/simple.css
@@ -11,3 +11,12 @@ a { color: #2BA6CB;}
 	padding:10px 16px;
 	margin-right:10px;
 }
+
+p.callout {
+	padding:15px;
+	margin-bottom: 15px;
+}
+
+p { 
+	margin-bottom: 10px; 
+}
