--- a/Source/Email/Templates/Simple/Html.cshtml
+++ b/Source/Email/Templates/Simple/Html.cshtml
@@ -12,5 +12,6 @@
     </head>
     <body>
         <a class="btn" href="http://microsoft.com">Simple</a>
+        <p class="callout">Some stuff here.</p>
     </body>
 </html>
